fix(cicero-app): WIP
Delete a main body scrollbar, because on this moment input_data scrollbar not work

--- a/crates/cicero-front/style/tailwind.css
+++ b/crates/cicero-front/style/tailwind.css
@@ -19,6 +19,6 @@
         @apply h-[100%];
     }
     body {
-        @apply flex flex-col h-[100%] bg-[#eeeeee] w-[100%];
+        @apply flex flex-col h-[100%] bg-[#eeeeee] w-[100%] overflow-hidden;
     }
 }
